# Daedalus

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  a.cpp  a.ll  a.out  abc.ll  am15.ll  comp.sh  compall.sh  compile_commands.json  nextstep.txt  notes.md  output.ll  papers_references.txt  phislices.xcf  sandbox.md  test214.ll  test215.ll  test316.ll  testA0.ll  testA1.ll  testNotes.md  teste  teste.ll  teste.txt  teste2  teste2.txt  tofile.sh
.github/workflows/: main.yml
.obsidian/: workspace.json
artifact/bash/: generate_tests.sh
artifact/docker/: Dockerfile  README.md
artifact/utils/: README.md  plot_graphs.py  requirements.txt  slices-analysis.ipynb  (+1 more)
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
buildback/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake
examples/: foo.ll  test.ll
include/: PHIGateAnalyzer.h  ProgramSlice.h  daedalus.h  debugCommon.h  instrToSlice.h  printFunc.h  reports.h
lib/: CMakeLists.txt  DebugUtils.cpp  PHIGateAnalyzer.cpp  ProgramSlice.cpp  daedalus.cpp  daedalusPlugin.cpp  debugCommon.cpp  instrToSlice.cpp  instrToSlicePlugin.cpp  printFunc.cpp  printFuncPlugin.cpp  reports.cpp
tests/: ._GLOBAL__sub_I_test2.cpp.dot  ._Z1fii.dot  ._Z1gi.dot  ._Z1hii.dot  .__cxx_global_var_init.dot  .clang-format  .clangd  .f.dot  .ll  .ll_result1.txt  .main.dot  .sliceAndDice.dot  2003-05-07-VarArgs.e.bc.d.d.ll  2003-05-07-VarArgs.e.bc.ll  2mm.e.bc.d.d.ll  2mm.e.bc.d.ll  3mm.e.bc.d.d.ll  3mm.e.bc.d.ll  8b10b.e.bc.d.d.ll  8b10b.e.bc.d.ll  AMGmk.e.bc.d.ll  AMGmk.e.bc.ll  Bubblesort.d.ll  CLAMR.e.bc.ll  CMakeLists.txt  CoMD.e.bc.d.ll  CoMD.e.bc.ll  FloatMM.d.ll  HACCKernels.e.bc.ll  HPCCG.e.bc.d.ll  HPCCG.e.bc.ll  IntMM.d.ll  LoopRestructuring-dbl.e.bc.d.ll  LoopRestructuring-dbl.e.bc.ll  LoopRestructuring-flt.e.bc.d.ll  LoopRestructuring-flt.e.bc.ll  Obsequi.e.bc.ll  Oscar.e.bc.ll  Oscar.ll  PENNANT.e.bc.ll  (+351 more)
(+174 files in other folders)
